# forgecli

./: .gitignore  LICENSE  README.md  forge  forgecli.py  install-termux.sh  pyproject.toml  requirements.txt
forgecli/: __init__.py  __main__.py  ascii_view.py  banner_builder.py  categories.py  cli.py  dashboard.py  exporter.py  filemanager.py  models.py  plugins.py  preview.py  profiles.py  self_update.py  settings_view.py  theme_creator.py  validate.py
forgecli/core/: __init__.py  config.py  dependencies.py  logging_utils.py  platform.py  system_info.py
forgecli/generators/: __init__.py  commands_runtime.py  project.py
forgecli/generators/templates/: CHANGELOG.md.tpl  CODE_OF_CONDUCT.md.tpl  CONTRIBUTING.md.tpl  Dockerfile.tpl  LICENSE.tpl  README.md.tpl  SECURITY.md.tpl  banner.py.tpl  commands.py.tpl  config.json.tpl  example_usage.py.tpl  gitignore.tpl  installer.py.tpl  main.py.tpl  pyproject.toml.tpl  requirements.txt.tpl  settings.json.tpl  test_basic.py.tpl  theme.json.tpl  theme.py.tpl  ui.py.tpl  updater.py.tpl  utils.py.tpl
forgecli/generators/templates/plugins/: _example.py.tpl
forgecli/themes/: __init__.py  builtin.py
forgecli/ui/: __init__.py  animations.py  banners.py  menu.py  prompts.py  theme.py
forgecli/wizard/: __init__.py  branding.py
